Aggiunti script per esecuzione rapida

--- a/FreeFem/visualize.conf
+++ b/FreeFem/visualize.conf
@@ -1,8 +1,13 @@
 # GNUPLOT script
+
+# Set output format
 #set terminal png truecolor
-set output "J.png"
+set terminal postscript eps enhanced color
+
+# Plot the objective function
+set output "export/images/J"
 set autoscale
 set xlabel "Iteration"
 set ylabel "Cost functional"
 set style data lines
-plot "J.txt" 
+plot "export/J.txt" 
