--- a/FreeFem/visualize.conf
+++ b/FreeFem/visualize.conf
@@ -10,4 +10,4 @@ set autoscale
 set xlabel "Iteration"
 set ylabel "Cost functional"
 set style data lines
-plot "export/J.txt" 
+plot "export/J.txt" lw 3 lc 'blue' title 'Cost Functional'
