--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ MATLAB/FEM_library/codegen/
 FreeFem/export/
 FreeFem/scripts/Trash
 MATLAB/FEM_library/ADR_mex_assembler_mex.mexmaci64
+MATLAB/FEM_library/ADR_mex_assembler_mex.mexa64
 *.m~
